issues that fixed all alignment issues and navigation from post to post issue too.

--- a/beautyWorld/WebContent/jsp/paxJsp/style.css
+++ b/beautyWorld/WebContent/jsp/paxJsp/style.css
@@ -114,7 +114,7 @@ aside, nav, article, figure {
    -moz-box-shadow: 0 4px 4px -2px #ccc;
         box-shadow: 0 4px 4px -2px #ccc; }
 .side_header_spacing { float: left; width: 270px; min-height: 300px; }
-#side_header { /*float: left;*/ position: fixed; top: 0; left: 0; width: 270px; }
+#side_header { /*float: left;*/ position: fixed; top: 0; left: 0; width: 270px;z-index:1; }
 .side_header_inside { padding: 15px 15px; }
 /*body.home #header { position: static; width: auto; }*/
 .slicknav_menu { display: none; }
@@ -136,7 +136,7 @@ aside, nav, article, figure {
 .header_menu ul li { font-size: 13px; font-family: 'Lato', sans-serif; font-weight: 300;  text-transform: uppercase; color: #666; letter-spacing: 1.5px; position: relative; padding-bottom: 1px; margin-bottom: 1px; }
 .header_menu ul li:last-child { margin-right: 0; }
 .header_menu ul li a { color: #333; display: block;  padding: 5px 15px; /*border-bottom: 3px solid #fff;*/ }
-
+.sub-menu{background-color: white;width:100%}
 
 .header_menu ul li a:hover,
 .header_menu ul li.current-menu-item a,
@@ -250,14 +250,14 @@ h1.single_title { font-size: 24px; margin: 0 0 20px; font-weight: normal; paddin
 #commentform input[type=submit] { background-color: #161616; color: #fff; border: 1px solid #6E6E6E; padding: 3px 5px; }
 .next_prev_cont { padding: 25px 0; }
 .next_prev_cont .left { float: left; width: 45%; }
-.next_prev_cont .left a { display: block; background: url('images/post_prev.png') no-repeat; background-position: top left; padding-left: 25px; min-height: 30px; }
+.next_prev_cont .left a { display: block; background: url('post_prev.png') no-repeat; background-position: top left; padding-left: 25px; min-height: 30px; }
 .next_prev_cont .right { float: right; width: 45%; text-align: right; }
-.next_prev_cont .right a { display: block; background: url('images/post_next.png') no-repeat; background-position: top right; padding-right: 25px;  min-height: 30px; }
+.next_prev_cont .right a { display: block; background: url('post_next.png') no-repeat; background-position: top right; padding-right: 25px;  min-height: 30px; }
 .next_prev_cont_top_right {  padding: 0; position: absolute; top: 0; right: 0; }
 .next_prev_cont_top_right .left { float: left; width: auto; }
-.next_prev_cont_top_right .left a { display: block; background: url('images/new-prev.png') no-repeat; background-position: top left; padding-left: 0px; min-height: 0px; width: 30px; height: 30px; }
+.next_prev_cont_top_right .left a { display: block; background: url('new-prev.png') no-repeat; background-position: top left; padding-left: 0px; min-height: 0px; width: 30px; height: 30px; }
 .next_prev_cont_top_right .right { float: right; width: auto; margin-left: 10px; }
-.next_prev_cont_top_right .right a { display: block; background: url('images/new-next.png') no-repeat; background-position: top right; padding-right: 0px;  min-height: 0px; width: 30px; height: 30px; }
+.next_prev_cont_top_right .right a { display: block; background: url('new-next.png') no-repeat; background-position: top right; padding-right: 0px;  min-height: 0px; width: 30px; height: 30px; }
 /* Sidebar */
 #sidebar { float: right; width: 300px; }
 .side_box { margin-bottom: 25px; }
